--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav class="navbar navbar-light bg-faded">
   <div class="container">
     <a class="navbar-brand" href="#">Mean Docker</a>
+    <a class="navbar-brand" href="#">Git repo has been changed!</a>
   </div>
 </nav>
 
